+++++++++

Sensors
+++++++

- **longitude**, **latitude** and **altitude** are not anymore properties of
  the GPS sensor but must be set at the environment level.

Modifiers
++++++++

- Introduce ECEF and Geodetic modifiers, allowing to convert coordinates from
  Blender world to ECEF-r or Geodetic coordinates (and vice-versa). It should
  improve interoperability with flight systems in general.

Middlewares
-----------

General
+++++++


Builder API
-----------

API addition
++++++++++++

Pymorse
-------

- Robots created in loop are handled smartly. They are still usable as
  previously, but it is also possible to access them using the list foos (if
  your robot name is foo) (#358).
- Streams are now created lazily, fixing control with large number of robots /
  sensors (#626).

What's new in MORSE 1.3?
========================

General
-------
- MORSE now installs by default support for almost all its supported
  middlewares (ROS, YARP, MOOS, HLA, and (partially) pocolibs). This should
  improve end-users' first experience with MORSE (it 'just works')
- new sandbox environment. Check `the doc for a screenshot <https://www.openrobots.org/morse/doc/latest/quickstart.html>`_.

Components
----------

Robots
++++++

Actuators
+++++++++

- Introduce the new actuator "arucomarker", allowing to
  simulate the ArUco augmented-reality marker.

Sensors
+++++++

- The timestamp field is now in seconds instead of milliseconds (#498)

- Semantic camera gains two properties (#396):
    - `tag` allows to restrict the kind of object you want to detect
    - `relative` returns the position information of the various objects from
      the camera sensor frame (and not the global frame).

- Laser Scanner sensors gain the possibility to return also a
  remission value at the `rssi` level.

- Introduce the new sensor "Radar Altimeter", allowing to retrieve the
  distance to the ground.

- Improvement of Acceleromter, IMU and Velocity sensor.  They now works